[package]
name = "fast_geoip_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fast_geoip_rs"
path = "src/lib.rs"

[dependencies]
futures = "0.3.21"
moka = "0.8.5"
once_cell = "1.12.0"
async-fs = "1.5.0"
serde = "1.0.137"
serde_bytes = "0.11.6"
serde_json = "1.0.81"
